--- a/basic.start.static.html
+++ b/basic.start.static.html
@@ -13,7 +13,7 @@ designating an object with static storage duration, to a temporary object
 by a constructor call, and if the initialization full-expression is a constant
 initializer for the object;</p></li><li ><p >if an object with static or thread storage duration is not initialized by a constructor call
 and if either the object is value-initialized or every full-expression that
-appears in its initializer is a constant expression.</p></li></ul><p ><span class='indexparent'><a class='index' id='initialization,run-time'></a></span>If constant initialization is not performed, a variable with static
+appears in its initializer is a constant expression.</p></li></ul><p ><span class='indexparent'><a class='index' id='initialization,runtime'></a></span>If constant initialization is not performed, a variable with static
 storage duration (<a href='basic.stc.static'>[basic.stc.static]</a>) or thread storage
 duration (<a href='basic.stc.thread'>[basic.stc.thread]</a>) is zero-initialized (<a href='dcl.init'>[dcl.init]</a>).
 Together, zero-initialization and constant initialization are called
