--- a/except.html
+++ b/except.html
@@ -669,7 +669,7 @@ the initialization of non-static data members from
 <i>S</i> consists of the type of the exception object that would be
 initialized by the operand, if present, or is the set of all types otherwise.
 </p></li><li ><p >If <span class='texttt'>e</span> is a <span class='texttt'>dynamic_cast</span> expression that casts to a reference type and
-requires a run-time check (<a href='expr.dynamic.cast'>[expr.dynamic.cast]</a>),
+requires a runtime check (<a href='expr.dynamic.cast'>[expr.dynamic.cast]</a>),
 <i>S</i> consists of the type <span class='texttt'>std::bad_cast</span>.
 </p></li><li ><p >If <span class='texttt'>e</span> is a <span class='texttt'>typeid</span> expression applied to a glvalue expression whose
 type is a polymorphic class type (<a href='expr.typeid'>[expr.typeid]</a>),
