--- a/expr.html
+++ b/expr.html
@@ -1325,9 +1325,9 @@ void foo(D* dp) {
 </pre><p ><i>&nbsp;—&nbsp;end example</i>&nbsp;]</p></div><div class='para' id='dynamic.cast-6'><div class='marginalizedparent'><a class='marginalized' href='#dynamic.cast-6'>6</a></div><p >Otherwise, <span class='texttt'>v</span> shall be a pointer to or a glvalue of a polymorphic
 type (<a href='class.virtual'>[class.virtual]</a>).</p></div><div class='para' id='dynamic.cast-7'><div class='marginalizedparent'><a class='marginalized' href='#dynamic.cast-7'>7</a></div><p >If <span class='texttt'>T</span> is “pointer to <i>cv</i> <span class='texttt'>void</span>”, then the result
 is a pointer to the most derived object pointed to by <span class='texttt'>v</span>.
-Otherwise, a run-time check is applied to see if the object pointed or
+Otherwise, a runtime check is applied to see if the object pointed or
 referred to by <span class='texttt'>v</span> can be converted to the type pointed or
-referred to by <span class='texttt'>T</span>.</p></div><div class='para' id='dynamic.cast-8'><div class='marginalizedparent'><a class='marginalized' href='#dynamic.cast-8'>8</a></div><p >If <span class='texttt'>C</span> is the class type to which <span class='texttt'>T</span> points or refers, the run-time
+referred to by <span class='texttt'>T</span>.</p></div><div class='para' id='dynamic.cast-8'><div class='marginalizedparent'><a class='marginalized' href='#dynamic.cast-8'>8</a></div><p >If <span class='texttt'>C</span> is the class type to which <span class='texttt'>T</span> points or refers, the runtime
 check logically executes as follows:</p><ul ><li ><p >If, in the most derived object pointed (referred) to by <span class='texttt'>v</span>,
 <span class='texttt'>v</span> points (refers) to a <span class='texttt'>public</span> base class subobject of a
 <span class='texttt'>C</span> object, and if only one object of type <span class='texttt'>C</span> is derived
@@ -1336,7 +1336,7 @@ class subobject of the most derived object, and the type of the most
 derived object has a base class, of type <span class='texttt'>C</span>, that is unambiguous
 and <span class='texttt'>public</span>, the result points (refers) to the
 <span class='texttt'>C</span> subobject of the most derived object.</p></li><li ><p >Otherwise, the
-run-time check <a class='hidden_link' href='#def:fails' id='def:fails'><i>fails</i></a>.
+runtime check <a class='hidden_link' href='#def:fails' id='def:fails'><i>fails</i></a>.
 </p></li></ul></div><div class='para' id='dynamic.cast-9'><div class='marginalizedparent'><a class='marginalized' href='#dynamic.cast-9'>9</a></div><p >The value of a failed cast to pointer type is the null pointer value of
 the required result type. A failed cast to reference type throws
 an exception (<a href='except.throw'>[except.throw]</a>) of a type that would match a
@@ -1352,7 +1352,7 @@ void g() {
 </span>  ap = dynamic_cast&lt;A*&gt;(bp);        <span class='comment'>// fails
 </span>  bp = dynamic_cast&lt;B*&gt;(ap);        <span class='comment'>// fails
 </span>  ap = dynamic_cast&lt;A*&gt;(&amp;d);        <span class='comment'>// succeeds
-</span>  bp = dynamic_cast&lt;B*&gt;(&amp;d);        <span class='comment'>// ill-formed (not a run-time check)
+</span>  bp = dynamic_cast&lt;B*&gt;(&amp;d);        <span class='comment'>// ill-formed (not a runtime check)
 </span>}
 
 class E : public D, public B { };
