--- a/tab.html
+++ b/tab.html
@@ -356,66 +356,61 @@ Boolean conversions             </td><td class='border center'>                 
 
 
 <span class='texttt'>abort_handler_s</span> </td><td class='left'>
-<span class='texttt'>ignore_handler_s</span> </td><td class='left'>
-<span class='texttt'>snwprintf_s</span> </td><td class='left'>
-<span class='texttt'>tmpnam_s</span> </td><td class='left'>
-<span class='texttt'>wcrtomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>asctime_s</span> </td><td class='left'>
-<span class='texttt'>L_tmpnam_s</span> </td><td class='left'>
-<span class='texttt'>sprintf_s</span> </td><td class='left'>
-<span class='texttt'>vfprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcscat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>bsearch_s</span> </td><td class='left'>
-<span class='texttt'>localtime_s</span> </td><td class='left'>
-<span class='texttt'>sscanf_s</span> </td><td class='left'>
-<span class='texttt'>vfscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcscpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>constraint_handler_t</span> </td><td class='left'>
-<span class='texttt'>mbsrtowcs_s</span> </td><td class='left'>
-<span class='texttt'>strcat_s</span> </td><td class='left'>
-<span class='texttt'>vfwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcsncat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ctime_s</span> </td><td class='left'>
 <span class='texttt'>mbstowcs_s</span> </td><td class='left'>
-<span class='texttt'>strcpy_s</span> </td><td class='left'>
-<span class='texttt'>vfwscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcsncpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>errno_t</span> </td><td class='left'>
-<span class='texttt'>memcpy_s</span> </td><td class='left'>
-<span class='texttt'>strerror_s</span> </td><td class='left'>
-<span class='texttt'>vprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcsnlen_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fopen_s</span> </td><td class='left'>
-<span class='texttt'>memmove_s</span> </td><td class='left'>
-<span class='texttt'>strerrorlen_s</span> </td><td class='left'>
-<span class='texttt'>vscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcsrtombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fprintf_s</span> </td><td class='left'>
-<span class='texttt'>memset_s</span> </td><td class='left'>
-<span class='texttt'>strlen_s</span> </td><td class='left'>
-<span class='texttt'>vsnprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcstok_s</span> </td></tr><tr ><td class='left'><span class='texttt'>freopen_s</span> </td><td class='left'>
-<span class='texttt'>printf_s</span> </td><td class='left'>
 <span class='texttt'>strncat_s</span> </td><td class='left'>
-<span class='texttt'>vsnwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcstombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fscanf_s</span> </td><td class='left'>
-<span class='texttt'>qsort_s</span> </td><td class='left'>
+<span class='texttt'>vswscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>asctime_s</span> </td><td class='left'>
+<span class='texttt'>memcpy_s</span> </td><td class='left'>
 <span class='texttt'>strncpy_s</span> </td><td class='left'>
-<span class='texttt'>vsprintf_s</span> </td><td class='left'>
-<span class='texttt'>wctomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwprintf_s</span> </td><td class='left'>
-<span class='texttt'>RSIZE_MAX</span> </td><td class='left'>
+<span class='texttt'>vwprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>bsearch_s</span> </td><td class='left'>
+<span class='texttt'>memmove_s</span> </td><td class='left'>
 <span class='texttt'>strtok_s</span> </td><td class='left'>
-<span class='texttt'>vsscanf_s</span> </td><td class='left'>
-<span class='texttt'>wmemcpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwscanf_s</span> </td><td class='left'>
-<span class='texttt'>rsize_t</span> </td><td class='left'>
+<span class='texttt'>vwscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>constraint_handler_t</span> </td><td class='left'>
+<span class='texttt'>memset_s</span> </td><td class='left'>
 <span class='texttt'>swprintf_s</span> </td><td class='left'>
-<span class='texttt'>vswprintf_s</span> </td><td class='left'>
-<span class='texttt'>wmemmove_s</span> </td></tr><tr ><td class='left'><span class='texttt'>getenv_s</span> </td><td class='left'>
-<span class='texttt'>scanf_s</span> </td><td class='left'>
+<span class='texttt'>wcrtomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ctime_s</span> </td><td class='left'>
+<span class='texttt'>printf_s</span> </td><td class='left'>
 <span class='texttt'>swscanf_s</span> </td><td class='left'>
-<span class='texttt'>vswscanf_s</span> </td><td class='left'>
-<span class='texttt'>wprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gets_s</span> </td><td class='left'>
-<span class='texttt'>set_constraint_handler_s</span> </td><td class='left'>
+<span class='texttt'>wcscat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>errno_t</span> </td><td class='left'>
+<span class='texttt'>qsort_s</span> </td><td class='left'>
 <span class='texttt'>tmpfile_s</span> </td><td class='left'>
-<span class='texttt'>vwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gmtime_s</span> </td><td class='left'>
-<span class='texttt'>snprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcscpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fopen_s</span> </td><td class='left'>
+<span class='texttt'>RSIZE_MAX</span> </td><td class='left'>
 <span class='texttt'>TMP_MAX_S</span> </td><td class='left'>
-<span class='texttt'>vwscanf_s</span> </td><td class='left'>
-</td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:118pt'>17.5.1.3</a> Freestanding implementations <a class='abbr_ref' href='compliance#tab:cpp.headers.freestanding'>[compliance]</a></h4><div class='numberedTable' id='cpp.headers.freestanding'>Table <a href='#cpp.headers.freestanding'>17</a> — C++ headers for freestanding implementations<br><table ><tr class='rowsep'><td colspan='2' class='center'><b>Subclause</b></td><td class='left'>	<b>Header(s)</b>	</td></tr><tr class='capsep'><td class='left'> 
+<span class='texttt'>wcsncat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fprintf_s</span> </td><td class='left'>
+<span class='texttt'>rsize_t</span> </td><td class='left'>
+<span class='texttt'>tmpnam_s</span> </td><td class='left'>
+<span class='texttt'>wcsncpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>freopen_s</span> </td><td class='left'>
+<span class='texttt'>scanf_s</span> </td><td class='left'>
+<span class='texttt'>vfprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcsnlen_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fscanf_s</span> </td><td class='left'>
+<span class='texttt'>set_constraint_handler_s</span> </td><td class='left'>
+<span class='texttt'>vfscanf_s</span> </td><td class='left'>
+<span class='texttt'>wcsrtombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwprintf_s</span> </td><td class='left'>
+<span class='texttt'>snprintf_s</span> </td><td class='left'>
+<span class='texttt'>vfwprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcstok_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwscanf_s</span> </td><td class='left'>
+<span class='texttt'>snwprintf_s</span> </td><td class='left'>
+<span class='texttt'>vfwscanf_s</span> </td><td class='left'>
+<span class='texttt'>wcstombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>getenv_s</span> </td><td class='left'>
+<span class='texttt'>sprintf_s</span> </td><td class='left'>
+<span class='texttt'>vprintf_s</span> </td><td class='left'>
+<span class='texttt'>wctomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gets_s</span> </td><td class='left'>
+<span class='texttt'>sscanf_s</span> </td><td class='left'>
+<span class='texttt'>vscanf_s</span> </td><td class='left'>
+<span class='texttt'>wmemcpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gmtime_s</span> </td><td class='left'>
+<span class='texttt'>strcat_s</span> </td><td class='left'>
+<span class='texttt'>vsnprintf_s</span> </td><td class='left'>
+<span class='texttt'>wmemmove_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ignore_handler_s</span> </td><td class='left'>
+<span class='texttt'>strcpy_s</span> </td><td class='left'>
+<span class='texttt'>vsnwprintf_s</span> </td><td class='left'>
+<span class='texttt'>wprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>L_tmpnam_s</span> </td><td class='left'>
+<span class='texttt'>strerror_s</span> </td><td class='left'>
+<span class='texttt'>vsprintf_s</span> </td><td class='left'>
+<span class='texttt'>wscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>localtime_s</span> </td><td class='left'>
+<span class='texttt'>strerrorlen_s</span> </td><td class='left'>
+<span class='texttt'>vsscanf_s</span> </td><td class='left'> </td></tr><tr ><td class='left'><span class='texttt'>mbsrtowcs_s</span> </td><td class='left'>
+<span class='texttt'>strlen_s</span> </td><td class='left'>
+<span class='texttt'>vswprintf_s</span> </td><td class='left'> </td></tr></table></div><hr><h4 ><a class='secnum' style='min-width:118pt'>17.5.1.3</a> Freestanding implementations <a class='abbr_ref' href='compliance#tab:cpp.headers.freestanding'>[compliance]</a></h4><div class='numberedTable' id='cpp.headers.freestanding'>Table <a href='#cpp.headers.freestanding'>17</a> — C++ headers for freestanding implementations<br><table ><tr class='rowsep'><td colspan='2' class='center'><b>Subclause</b></td><td class='left'>	<b>Header(s)</b>	</td></tr><tr class='capsep'><td class='left'> 
 
 
                     </td><td class='left'>                            </td><td class='left'>   <span class='texttt'>&lt;ciso646&gt;</span>       </td></tr><tr class='rowsep'><td class='left'> 
