--- a/utilities.html
+++ b/utilities.html
@@ -7305,7 +7305,7 @@ Template parameters named
 specified in <a href='algorithms.general'>[algorithms.general]</a>.
 Template parameters named <span class='texttt'>Hash</span> shall meet the requirements as specified in <a href='hash.requirements'>[hash.requirements]</a>.</p></div><div class='para' id='func.searchers-3'><div class='marginalizedparent'><a class='marginalized' href='#func.searchers-3'>3</a></div><p >The Boyer-Moore searcher implements the Boyer-Moore search algorithm.
 The Boyer-Moore-Horspool searcher implements the Boyer-Moore-Horspool search algorithm.
-In general, the Boyer-Moore searcher will use more memory and give better run-time performance than Boyer-Moore-Horspool</p></div><div id='func.searchers.default'><h4 ><a class='secnum' href='#func.searchers.default' style='min-width:118pt'>20.14.13.1</a> Class template <span class='texttt'>default_searcher</span> <a class='abbr_ref' href='func.searchers.default'>[func.searchers.default]</a></h4><p ><span class='indexparent'><a class='index' id='default_searcher'></a></span></p><pre class='codeblock'>
+In general, the Boyer-Moore searcher will use more memory and give better runtime performance than Boyer-Moore-Horspool</p></div><div id='func.searchers.default'><h4 ><a class='secnum' href='#func.searchers.default' style='min-width:118pt'>20.14.13.1</a> Class template <span class='texttt'>default_searcher</span> <a class='abbr_ref' href='func.searchers.default'>[func.searchers.default]</a></h4><p ><span class='indexparent'><a class='index' id='default_searcher'></a></span></p><pre class='codeblock'>
 template &lt;class ForwardIterator1, class BinaryPredicate = equal_to&lt;&gt;&gt;
 class default_searcher {
 public:
