--- a/diff.stat.html
+++ b/diff.stat.html
@@ -5,7 +5,7 @@ Constructors used in initializers may allocate
 resources which need to be de-allocated upon leaving the
 block.
 Allowing jump past initializers would require
-complicated run-time determination of allocation.
+complicated runtime determination of allocation.
 Furthermore, any use of the uninitialized object could be a
 disaster.
 With this simple compile-time rule, C++ assures that
