--- a/library.html
+++ b/library.html
@@ -651,68 +651,63 @@ These names are also subject to the restrictions of <a href='macro.names'>[macro
 
 
 <span class='texttt'>abort_handler_s</span> </td><td class='left'>
-<span class='texttt'>ignore_handler_s</span> </td><td class='left'>
-<span class='texttt'>snwprintf_s</span> </td><td class='left'>
-<span class='texttt'>tmpnam_s</span> </td><td class='left'>
-<span class='texttt'>wcrtomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>asctime_s</span> </td><td class='left'>
-<span class='texttt'>L_tmpnam_s</span> </td><td class='left'>
-<span class='texttt'>sprintf_s</span> </td><td class='left'>
-<span class='texttt'>vfprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcscat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>bsearch_s</span> </td><td class='left'>
-<span class='texttt'>localtime_s</span> </td><td class='left'>
-<span class='texttt'>sscanf_s</span> </td><td class='left'>
-<span class='texttt'>vfscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcscpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>constraint_handler_t</span> </td><td class='left'>
-<span class='texttt'>mbsrtowcs_s</span> </td><td class='left'>
-<span class='texttt'>strcat_s</span> </td><td class='left'>
-<span class='texttt'>vfwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcsncat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ctime_s</span> </td><td class='left'>
 <span class='texttt'>mbstowcs_s</span> </td><td class='left'>
-<span class='texttt'>strcpy_s</span> </td><td class='left'>
-<span class='texttt'>vfwscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcsncpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>errno_t</span> </td><td class='left'>
-<span class='texttt'>memcpy_s</span> </td><td class='left'>
-<span class='texttt'>strerror_s</span> </td><td class='left'>
-<span class='texttt'>vprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcsnlen_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fopen_s</span> </td><td class='left'>
-<span class='texttt'>memmove_s</span> </td><td class='left'>
-<span class='texttt'>strerrorlen_s</span> </td><td class='left'>
-<span class='texttt'>vscanf_s</span> </td><td class='left'>
-<span class='texttt'>wcsrtombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fprintf_s</span> </td><td class='left'>
-<span class='texttt'>memset_s</span> </td><td class='left'>
-<span class='texttt'>strlen_s</span> </td><td class='left'>
-<span class='texttt'>vsnprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcstok_s</span> </td></tr><tr ><td class='left'><span class='texttt'>freopen_s</span> </td><td class='left'>
-<span class='texttt'>printf_s</span> </td><td class='left'>
 <span class='texttt'>strncat_s</span> </td><td class='left'>
-<span class='texttt'>vsnwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wcstombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fscanf_s</span> </td><td class='left'>
-<span class='texttt'>qsort_s</span> </td><td class='left'>
+<span class='texttt'>vswscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>asctime_s</span> </td><td class='left'>
+<span class='texttt'>memcpy_s</span> </td><td class='left'>
 <span class='texttt'>strncpy_s</span> </td><td class='left'>
-<span class='texttt'>vsprintf_s</span> </td><td class='left'>
-<span class='texttt'>wctomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwprintf_s</span> </td><td class='left'>
-<span class='texttt'>RSIZE_MAX</span> </td><td class='left'>
+<span class='texttt'>vwprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>bsearch_s</span> </td><td class='left'>
+<span class='texttt'>memmove_s</span> </td><td class='left'>
 <span class='texttt'>strtok_s</span> </td><td class='left'>
-<span class='texttt'>vsscanf_s</span> </td><td class='left'>
-<span class='texttt'>wmemcpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwscanf_s</span> </td><td class='left'>
-<span class='texttt'>rsize_t</span> </td><td class='left'>
+<span class='texttt'>vwscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>constraint_handler_t</span> </td><td class='left'>
+<span class='texttt'>memset_s</span> </td><td class='left'>
 <span class='texttt'>swprintf_s</span> </td><td class='left'>
-<span class='texttt'>vswprintf_s</span> </td><td class='left'>
-<span class='texttt'>wmemmove_s</span> </td></tr><tr ><td class='left'><span class='texttt'>getenv_s</span> </td><td class='left'>
-<span class='texttt'>scanf_s</span> </td><td class='left'>
+<span class='texttt'>wcrtomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ctime_s</span> </td><td class='left'>
+<span class='texttt'>printf_s</span> </td><td class='left'>
 <span class='texttt'>swscanf_s</span> </td><td class='left'>
-<span class='texttt'>vswscanf_s</span> </td><td class='left'>
-<span class='texttt'>wprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gets_s</span> </td><td class='left'>
-<span class='texttt'>set_constraint_handler_s</span> </td><td class='left'>
+<span class='texttt'>wcscat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>errno_t</span> </td><td class='left'>
+<span class='texttt'>qsort_s</span> </td><td class='left'>
 <span class='texttt'>tmpfile_s</span> </td><td class='left'>
-<span class='texttt'>vwprintf_s</span> </td><td class='left'>
-<span class='texttt'>wscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gmtime_s</span> </td><td class='left'>
-<span class='texttt'>snprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcscpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fopen_s</span> </td><td class='left'>
+<span class='texttt'>RSIZE_MAX</span> </td><td class='left'>
 <span class='texttt'>TMP_MAX_S</span> </td><td class='left'>
-<span class='texttt'>vwscanf_s</span> </td><td class='left'>
-</td></tr></table></div></div><div class='footnote' id='footnote-169'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-169'>169)</a></div><p >A header is not necessarily a source file, nor are the
+<span class='texttt'>wcsncat_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fprintf_s</span> </td><td class='left'>
+<span class='texttt'>rsize_t</span> </td><td class='left'>
+<span class='texttt'>tmpnam_s</span> </td><td class='left'>
+<span class='texttt'>wcsncpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>freopen_s</span> </td><td class='left'>
+<span class='texttt'>scanf_s</span> </td><td class='left'>
+<span class='texttt'>vfprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcsnlen_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fscanf_s</span> </td><td class='left'>
+<span class='texttt'>set_constraint_handler_s</span> </td><td class='left'>
+<span class='texttt'>vfscanf_s</span> </td><td class='left'>
+<span class='texttt'>wcsrtombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwprintf_s</span> </td><td class='left'>
+<span class='texttt'>snprintf_s</span> </td><td class='left'>
+<span class='texttt'>vfwprintf_s</span> </td><td class='left'>
+<span class='texttt'>wcstok_s</span> </td></tr><tr ><td class='left'><span class='texttt'>fwscanf_s</span> </td><td class='left'>
+<span class='texttt'>snwprintf_s</span> </td><td class='left'>
+<span class='texttt'>vfwscanf_s</span> </td><td class='left'>
+<span class='texttt'>wcstombs_s</span> </td></tr><tr ><td class='left'><span class='texttt'>getenv_s</span> </td><td class='left'>
+<span class='texttt'>sprintf_s</span> </td><td class='left'>
+<span class='texttt'>vprintf_s</span> </td><td class='left'>
+<span class='texttt'>wctomb_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gets_s</span> </td><td class='left'>
+<span class='texttt'>sscanf_s</span> </td><td class='left'>
+<span class='texttt'>vscanf_s</span> </td><td class='left'>
+<span class='texttt'>wmemcpy_s</span> </td></tr><tr ><td class='left'><span class='texttt'>gmtime_s</span> </td><td class='left'>
+<span class='texttt'>strcat_s</span> </td><td class='left'>
+<span class='texttt'>vsnprintf_s</span> </td><td class='left'>
+<span class='texttt'>wmemmove_s</span> </td></tr><tr ><td class='left'><span class='texttt'>ignore_handler_s</span> </td><td class='left'>
+<span class='texttt'>strcpy_s</span> </td><td class='left'>
+<span class='texttt'>vsnwprintf_s</span> </td><td class='left'>
+<span class='texttt'>wprintf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>L_tmpnam_s</span> </td><td class='left'>
+<span class='texttt'>strerror_s</span> </td><td class='left'>
+<span class='texttt'>vsprintf_s</span> </td><td class='left'>
+<span class='texttt'>wscanf_s</span> </td></tr><tr ><td class='left'><span class='texttt'>localtime_s</span> </td><td class='left'>
+<span class='texttt'>strerrorlen_s</span> </td><td class='left'>
+<span class='texttt'>vsscanf_s</span> </td><td class='left'> </td></tr><tr ><td class='left'><span class='texttt'>mbsrtowcs_s</span> </td><td class='left'>
+<span class='texttt'>strlen_s</span> </td><td class='left'>
+<span class='texttt'>vswprintf_s</span> </td><td class='left'> </td></tr></table></div></div><div class='footnote' id='footnote-169'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-169'>169)</a></div><p >A header is not necessarily a source file, nor are the
 sequences delimited by <span class='texttt'>&lt;</span> and <span class='texttt'>&gt;</span> in header names necessarily valid source
-file names (<a href='cpp.include'>[cpp.include]</a>). </p></div><div class='footnote' id='footnote-170'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-170'>170)</a></div><p >It is intentional that there is no C++ header
+file names (<a href='cpp.include'>[cpp.include]</a>).</p></div><div class='footnote' id='footnote-170'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-170'>170)</a></div><p >It is intentional that there is no C++ header
 for any of these C headers:
 <span class='indexparent'><a class='index' id='stdatomic.h'></a></span><span class='indexparent'><a class='index' id='stdnoreturn.h'></a></span><span class='indexparent'><a class='index' id='threads.h'></a></span><span class='texttt'>&lt;stdatomic.h&gt;</span>,
 <span class='texttt'>&lt;stdnoreturn.h&gt;</span>,
@@ -786,7 +781,7 @@ linkage for this purpose.<a class='footnotenum' href='#footnote-175'>175</a></p>
 defined in the library and required by a C++ program are included in
 the program prior to program startup.</p><p ><span class='indexparent'><a class='index' id='startup,program'></a></span><span class='textsc'>See also:</span>
 replacement functions (<a href='replacement.functions'>[replacement.functions]</a>),
-run-time changes (<a href='handler.functions'>[handler.functions]</a>).</p></div><div class='footnote' id='footnote-175'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-175'>175)</a></div><p >The only reliable way to declare an object or
+runtime changes (<a href='handler.functions'>[handler.functions]</a>).</p></div><div class='footnote' id='footnote-175'><div class='footnoteNumberParent'><a class='marginalized' href='#footnote-175'>175)</a></div><p >The only reliable way to declare an object or
 function signature from the C standard library is by including the header that
 declares it, notwithstanding the latitude granted in 7.1.4 of the C
 Standard.</p></div></div></div><div id='utility.requirements'><h3 ><a class='secnum' href='#utility.requirements' style='min-width:103pt'>17.5.3</a> Requirements on types and expressions <a class='abbr_ref' href='utility.requirements'>[utility.requirements]</a></h3><div class='para' id='utility.requirements-1'><div class='marginalizedparent'><a class='marginalized' href='#utility.requirements-1'>1</a></div><p ><a href='utility.arg.requirements'>[utility.arg.requirements]</a>
